added error handling, updated db to include narva/tallinn, updated geocode location matching